poke/testsuite/poke.pkl/printf-diag-13.pk
/* { dg-do compile } */

printf "foo %ux bar", 10; /* { dg-error "" } */
